// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 603.2313,
  },
  "p2": {
    "hp": 35.488,
    "state": "VICTORY",
    "x": 759.2947,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 2742,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:e0d53373",
  "t300:98e6902b",
  "t450:557de454",
  "t600:ebf76f2a",
  "t750:d758b95a",
  "t900:4d9e2b21",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 45.4312,
    "state": "IDLE",
    "x": 591.3817,
  },
  "p2": {
    "hp": 100,
    "state": "BLOCK",
    "x": 865.1875,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:b1950e37",
  "t240:bd1d82f0",
  "t360:173ad00f",
  "t480:d3dc16b7",
  "t600:9d717c50",
  "t720:e61ba945",
  "t840:22c7b794",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:415d1048",
  "t240:bb788ca1",
  "t360:e0037abc",
  "t480:568ad2b3",
  "t600:e08631c2",
  "t720:6656abdb",
  "t840:52536def",
  "t960:a57b6192",
  "t1080:5ea05248",
  "t1200:f244d426",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 17.0974,
    "state": "HEAVY_ATTACK",
    "x": 364.724,
  },
  "p2": {
    "hp": 44.704,
    "state": "HEAVY_ATTACK",
    "x": 614.6367,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;
